--- a/css/theme/solarized-rev.css
+++ b/css/theme/solarized-rev.css
@@ -4,6 +4,7 @@
  */
 @import url(../../lib/font/league-gothic/league-gothic.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+
 /**
  * Solarized colors by Ethan Schoonover
  */
@@ -50,7 +51,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #586e75;
-  font-family: "A-OTF 見出ゴMB31 Pr6N MB31", sans-serif;
+  font-family: "A-OTF UD新丸ゴ Pr6N L", sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal; 
@@ -58,7 +59,9 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+  font-size: 3.77em;
+  font-family: "かづらき SP2N L", sans-serif;
+}
 
 .reveal h2 {
   font-size: 2.11em; }
