--- a/css/theme/moon-rev.css
+++ b/css/theme/moon-rev.css
@@ -19,9 +19,10 @@ body {
   background-color: #002b36; }
 
 .reveal {
-  font-family: "A-OTF UD新丸ゴ Pr6N L", sans-serif;
-  font-size: 35px;
+  font-family: "Rounded Mgen+ 2pp Medium", sans-serif;
+  font-size: 32px;
   font-weight: normal;
+  letter-spacing: 1.2px;
   color: #d8dcdc;
 }
 
@@ -37,7 +38,7 @@ body {
 
 .reveal .slides > section,
 .reveal .slides > section > section {
-  line-height: 1.5;
+  line-height: 1.6;
   font-weight: inherit; }
 
 /*********************************************
@@ -51,7 +52,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eee8d5;
-  font-family: "A-OTF 見出ゴMB31 Pr6N MB31", sans-serif;
+  font-family: "源真ゴシック Medium", sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
@@ -62,17 +63,17 @@ body {
   font-size: 3.77em; }
 
 .reveal h2 {
-  font-size: 2.11em; }
+  font-size: 2.2em; }
 
 .reveal h3 {
-  font-size: 1.55em; }
+  font-size: 1.92em; }
 
 .reveal h4, .reveal h5, .reveal h6 {
-  font-family: "A-OTF 中ゴシックBBB Pr6N Med", sans-serif;
+  font-family: "Yu Gothic UI Semibold", sans-serif;
 }
 
 .reveal h4 {
-  font-size: 1em; }
+  font-size: 1.4em; }
 
 .reveal h5 {
   font-size: 0.8em;
